<resources>
    <string name="app_name">VietGlobe</string>
    <string name="app_slogan">Tin tức thế giới - trong tầm tay bạn</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="please_wait">Đang tải…</string>
    <string name="selected_language">Ngôn ngữ đã chọn</string>
    <string name="search_filter">Bộ lọc tìm kiếm</string>
    <string name="language">Ngôn ngữ</string>
    <string name="sort_by">Sắp xếp theo</string>
    <string name="apply">Áp dụng</string>
    <string name="search_hint">Tìm kiếm tin tức, chủ đề...</string>
    <string name="next">Tiếp theo</string>
    <string name="back">Quay lại</string>
    <string name="finish">Hoàn tất</string>
    <string name="title_onboarding_1">Chào mừng đến với ứng dụng VietGlobe News!</string>
    <string name="description_onboarding_1">Một ứng dụng tin tức cho phép bạn đọc và chia sẻ thông tin cần thiết để luôn dẫn đầu xu hướng trên toàn thế giới.</string>
    <string name="title_onboarding_2">Nhanh chóng, đơn giản và trực quan</string>
    <string name="description_onboarding_2">Thông tin và tin tức bằng nhiều ngôn ngữ, theo thời gian thực và theo tiêu chí của bạn. Không gì hơn. Hãy bắt đầu sử dụng ngay!</string>
    <string name="title_onboarding_3">Tốt hơn cả báo giấy</string>
    <string name="description_onboarding_3">Nhận bài viết từ tất cả các tờ báo lớn trên thế giới chỉ với một cú nhấp chuột và lưu tin yêu thích của bạn làm đánh dấu. Bắt đầu thôi!</string>
    <string name="retry">Thử lại</string>
    <string name="internet_connection_error">Nội dung này không khả dụng khi không có kết nối internet</string>
    <string name="no_result_found">Không tìm thấy kết quả</string>
    <string name="service_unavailable">Dịch vụ tạm thời không khả dụng. Vui lòng thử lại sau</string>
    <string name="check_internet">Vui lòng kiểm tra kết nối internet của bạn</string>
    <string name="error">Lỗi</string>
    <string name="network_error">Lỗi mạng</string>
    <string name="search_description">Vui lòng chọn các tùy chọn để tùy chỉnh tìm kiếm</string>
    <string name="close">Đóng</string>
    <string name="bookmarks">Đánh dấu</string>
    <string name="empty_bookmark_text">Lưu một đánh dấu và nó sẽ xuất hiện ở đây</string>
    <string name="no_bookmarks">Không có đánh dấu nào</string>
    <string name="version">Phiên bản</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="link_not_reachable">Xin lỗi, liên kết này không thể truy cập qua ứng dụng. Nhấn giữ để mở bằng trình duyệt</string>
    <string name="web_error">Lỗi web</string>
    <string name="success">Thành công</string>
    <string name="bookmark_saved">Đã lưu đánh dấu</string>
    <string name="bookmark_deleted">Đã xóa đánh dấu thành công</string>
    <string name="validate">Xác nhận</string>
    <string name="language_description">Chọn ngôn ngữ cho nguồn tin tức</string>
    <string name="general_category">General</string>
    <string name="science_category">Science</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="technology_category">Technology</string>
    <string name="sports_category">Sports</string>
    <string name="sport_toggle">Thể thao</string>
    <string name="tech_toggle">Công nghệ</string>
    <string name="tv_toggle">TV</string>
    <string name="all_toggle">Tất cả</string>
    <string name="article_image">Ảnh bài viết</string>
    <string name="summary">Tóm tắt</string>
    <string name="summarize_article">Tóm tắt bài viết</string>
    <string name="search_news">Tìm kiếm tin tức</string>
    <string name="translate">Dịch</string>
    <string name="translation">Bản dịch</string>
    <string name="about">Giới thiệu</string>
    <string name="android_developer">Lập trình viên Android</string>
    <string name="credits">Ghi nhận</string>
    <string name="custom_copyright">Bản quyền tùy chỉnh</string>
    <string name="note_the_app">Đánh giá ứng dụng</string>
    <string name="open_source_licenses">Giấy phép mã nguồn mở</string>
    <string name="source_code">Mã nguồn</string>
    <string name="science_toggle">Khoa học</string>


    <string-array name="languages">
        <item>DE</item>
        <item>EN</item>
        <item>ES</item>
        <item>FR</item>
        <item>IT</item>
        <item>NL</item>
        <item>RU</item>
    </string-array>

    <string-array name="languages_values" translatable="false">
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <item>nl</item>
        <item>ru</item>
    </string-array>

    <string-array name="options">
        <item>Ngày đăng</item>
        <item>Phổ biến</item>
        <item>Liên quan</item>
    </string-array>

    <string-array name="options_values" translatable="false">
        <item>PubishedAt</item>
        <item>Popularity</item>
        <item>Relevancy</item>
    </string-array>

</resources>
